refact: making astHandler better to understand